add original link to founctional quickSort

--- a/_posts/2015-01-18-函数式快排.md
+++ b/_posts/2015-01-18-函数式快排.md
@@ -1,5 +1,7 @@
 函数式快排(Functional Quicksort)
 ----
+>文字翻译自[objc](http://www.objc.io)，原文连接：『[Decomposing Arrays](http://www.objc.io/snippets/3.html)』
+
 下面是一个快排的变体实现，并没在速度上有所改良，大多快排实现的空间复杂度也是恒定的。不过，这段代码应该是最简洁最清晰的一种实现：
 
 	func qsort(input: [Int]) -> [Int] {
