fix error text in post .md 文字 to 文章

--- a/_posts/2015-01-16-拆解数组.md
+++ b/_posts/2015-01-16-拆解数组.md
@@ -1,6 +1,6 @@
 拆解数组（Decomposing Arrays）
 ----
->文字翻译自[objc](http://www.objc.io)，原文连接：『[Decomposing Arrays](http://www.objc.io/snippets/1.html)』
+>文章翻译自[objc](http://www.objc.io)，原文连接：『[Decomposing Arrays](http://www.objc.io/snippets/1.html)』
 
 下边的代码将一个Array拆解到一个元组中，元组第一项是数组的第一个元素，元组的第二项是数组除去第一个元素后的剩余元素组成的数组，若为Array是空的，返回nil：
 
