rename combined pattern matching

--- a/_posts/2015-01-31-组合条件匹配.md
+++ b/_posts/2015-01-31-组合条件匹配.md
@@ -1,4 +1,4 @@
-Combined pattern-matching
+组合条件匹配(Combined pattern-matching)
 ----
 >文章翻译自[objc](http://www.objc.io)，原文连接：『[Enums instead of Booleans](http://www.objc.io/snippets/12.html)』
 
