--- a/_posts/2015-01-31-组合条件匹配.md
+++ b/_posts/2015-01-31-组合条件匹配.md
@@ -1,6 +1,6 @@
 组合条件匹配(Combined pattern-matching)
 ----
->文章翻译自[objc](http://www.objc.io)，原文连接：『[Enums instead of Booleans](http://www.objc.io/snippets/12.html)』
+>文章翻译自[objc](http://www.objc.io)，原文连接：『[Combined pattern-matching](http://www.objc.io/snippets/15.html)』
 
 假设你想实现一个跟枚举等价的操作符。例如，假设我们想要自己实现一个Optional类型。如果我们自己来实现Optional类型，看看下边不同的分支条件，你可能会这么写：
 
