change pages themem to iLotus by Zhanxin

--- a/_posts/2015-01-16-函数组合.md
+++ b/_posts/2015-01-16-函数组合.md
@@ -1,5 +1,10 @@
-函数组合(Function Composition)
-----
+---
+layout: post
+title: 函数组合(Function Composition)
+description: 在函数式编程中，我们习惯于把一些小的、独立的函数，组合成新的函数。假设我们有一个获取指定URL内容的函数、一个把字符串按换行拆分到数组的函数和一个计算元素个数的函数。我们可以把这些函数组合成一个统计指定URL内容行数的函数出来...
+keywords: 函数组合,Function Composition
+---
+
 >文章翻译自[objc](http://www.objc.io)，原文连接：『[Function Composition](http://www.objc.io/snippets/2.html)』
 
 在函数式编程中，我们习惯于把一些小的、独立的函数，组合成新的函数。假设我们有一个获取指定URL内容的函数、一个把字符串按换行拆分到数组的函数和一个计算元素个数的函数。我们可以把这些函数组合成一个统计指定URL内容行数的函数出来：
