--- a/_posts/2015-01-21-Currying.md
+++ b/_posts/2015-01-21-Currying.md
@@ -1,5 +1,10 @@
-Currying
-----
+---
+layout: post
+title: Currying
+description: 把一个多参数函数转换成多个单参数的过程叫作「Currying」。例如有这样一个函数，它有三个参数...
+keywords: Currying
+---
+
 >文章翻译自[objc](http://www.objc.io)，原文连接：『[Currying](http://www.objc.io/snippets/6.html)』
 
 把一个多参数函数转换成多个单参数的过程叫作「Currying」。例如有这样一个函数，它有三个参数：
