--- a/_posts/2015-01-21-Reduce.md
+++ b/_posts/2015-01-21-Reduce.md
@@ -1,5 +1,10 @@
-Reduce
-----
+---
+layout: post
+title: Reduce
+description: 在函数式编程中，最流行的一种操作就是Reduce（在其他语言中有时候被称作fold）。Reduce操作主要做用在数组上，并携带着一个初始值，使其与数组中的每一项进行组合。例如我们要对一个integer类型的数组进行求和，我们可以声明一个sum函数，他有一个初始值0，然后通过中间操作符"+",联合所有元素进行求和...
+keywords: Reduce
+---
+
 >文章翻译自[objc](http://www.objc.io)，原文连接：『[Reduce](http://www.objc.io/snippets/5.html)』
 
 在函数式编程中，最流行的一种操作就是Reduce（在其他语言中有时候被称作fold）。Reduce操作主要做用在数组上，并携带着一个初始值，使其与数组中的每一项进行组合。例如我们要对一个integer类型的数组进行求和，我们可以声明一个sum函数，他有一个初始值0，然后通过中间操作符"+",联合所有元素进行求和：
