--- a/_posts/2015-01-24-类型封装.md
+++ b/_posts/2015-01-24-类型封装.md
@@ -1,5 +1,10 @@
-类型包装（Wrapper Types）
-----
+---
+layout: post
+title: 类型包装（Wrapper Types）
+description: 有时我们需要两种类型可以相互区分。例如，你有一个包含积分的用户账户系统，你有一个函数可以从服务端获取相应用户的积分...
+keywords: 类型包装,Wrapper Types
+---
+
 >文章翻译自[objc](http://www.objc.io)，原文连接：『[Map for Optionals](http://www.objc.io/snippets/8.html)』
 
 有时我们需要两种类型可以相互区分。例如，你有一个包含积分的用户账户系统，你有一个函数可以从服务端获取相应用户的积分：
