--- a/_posts/2015-01-27-用枚举代替布尔.md
+++ b/_posts/2015-01-27-用枚举代替布尔.md
@@ -1,3 +1,9 @@
+---
+layout: post
+title: 用枚举代替布尔(Enums instead of Booleans)
+description: 布尔在很多语言中都是基本类型数据之一。在swift和Object-C中，我们在很多地方会使用到它。不过，为了使代码逻辑更清晰，有时我们会引入一种新的类型代替。例如，你可以重新考虑一些控制UITableView选择行为的方式...
+keywords: 用枚举代替布尔,Enums instead of Booleans
+---
 用枚举代替布尔(Enums instead of Booleans)
 ----
 >文章翻译自[objc](http://www.objc.io)，原文连接：『[Enums instead of Booleans](http://www.objc.io/snippets/12.html)』
