--- a/_posts/2015-01-27-轻量级接口包装.md
+++ b/_posts/2015-01-27-轻量级接口包装.md
@@ -1,3 +1,9 @@
+---
+layout: post
+title: 轻量级接口包装(Lightweight API Wrappers)
+description: Objective-C 的API与我们写的swift代码相比，缺少很多类型安全机制。例如Foundation的JSON序列化接口+JSONObjectWithData:options:error:。这个类函数返回一个AnyObject?类型的对象。正如我们所知，其实我们经常希望得到的是一个dictionary,所以我们通过下边的包装函数，让事情变得更简单...
+keywords: 轻量级接口包装,Lightweight API Wrappers
+---
 轻量级接口包装(Lightweight API Wrappers)
 ----
 >文章翻译自[objc](http://www.objc.io)，原文连接：『[Lightweight API Wrappers](http://www.objc.io/snippets/11.html)』
